tests/NormalTests/paczka2/big_fuzzy/73438568.err
Error in line 1: O75kaTGeDVa A739 8,3
Error in line 15: S411 S147 60,1
Error in line 9: DoTb0 A739 91,9
Error in line 19: DoTb0 S411 53,0
Error in line 16: S411 A224 60,5
Error in line 22: DoTb0 A224 19,7
Error in line 35: DoTb0 S411 40,8
Error in line 63: O75kaTGeDVa S147 1",3
Error in line 68: SxPiuxTTz A224 -3,3
Error in line 67: O75kaTGeDVa S147 15,4
Error in line 69: O75kaTGeDVa A739 2,3
Error in line 77: c2sQdIJ A739 65,2
Error in line 79: c2sQdIJ S147 25,0
Error in line 97: sBk7e8 A739 63,7
Error in line 101: c2sQdIJ S411 63,4
Error in line 109: sBk7e8 S411 89,0
Error in line 116: sBk7e8 S147 68,9
Error in line 105: O75kaTGeDVa A224 133,6
Error in line 148: DoTb0 A224 79,0
Error in line 145: O75kaTGeDVa S411 236,9
Error in line 153: S411 S411 234,2
Error in line 161: sBk7e8 S411 39,8
Error in line 149: DoTb0 A739 36,9
Error in line 165: 0xnf S147 27,1
Error in line 170: c2sQdIJ A739 30,8
Error in line 169: 0xnf S411 33,1
Error in line 171: c2sQdIJ A224 31,2
Error in line 157: O75kaTGeDVa S411 56,3
Error in line 178: DoTb0 A224 12,3
Error in line 182: c2sQdIJ S411 76,8
Error in line 189: DoTb0 A739 33,8
Error in line 196: S411 A739 11,1
Error in line 203: S411 S147 66,3
Error in line 207: O75kaTGeDVa A739 64,2
Error in line 198: DoTb0 S411 14,1
Error in line 221: DoTb0 A739 45,7
Error in line 227: 0xnf A739 61,8
Error in line 234: SxPiuxTTz S147 81,6
Error in line 230: 0xnf A224 30,4
